Fri Aug 17 11:19:01 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Added include files because of compile errors in certain
	  builds.

Fri Aug 17 09:04:50 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/Message_Queue_T.h:
        * ace/Message_Queue_T.cpp:
        * ace/Stream.h:
        * ace/Stream.cpp:
        * tests/Bug_4055_Regression_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Fixed compile errors for a bunch of crappy compilers
          like the one on RHEL53 and AIX.

Thu Aug 16 18:47:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:
          List Time_Value_T files

Thu Aug 16 13:43:39 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/Message_Queue_T.cpp:
        * ace/Stream.cpp:
        * ace/Thread_Manager.cpp:
        * tests/Bug_4055_Regression_Test.cpp:
          Fixed problems with single threaded builds.

Thu Aug 16 12:44:05 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/Task_T.inl:
        * ace/Time_Policy_T.inl:
          Fuzz fixes.

Thu Aug 16 09:43:00 UTC 2012  Simon Massey <sma at prismtech dot com>

        * test/Bug_3943_Regression_Test.cpp:

          Another cast required to remove warning.

Thu Aug 16 09:22:31 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/Condition_Attributes.h:
        * ace/Condition_Attributes.inl:
        * ace/Condition_Attributes.cpp:
        * ace/Condition_Recursive_Thread_Mutex.h:
        * ace/Condition_Recursive_Thread_Mutex.cpp:
        * ace/Condition_T.h:
        * ace/Condition_T.cpp:
        * ace/Condition_Thread_Mutex.h:
        * ace/Condition_Thread_Mutex.inl:
        * ace/Condition_Thread_Mutex.cpp:
        * ace/Message_Queue.h:
        * ace/Message_Queue_T.h:
        * ace/Message_Queue_T.cpp:
        * ace/Module.h:
        * ace/Module.inl:
        * ace/Module.cpp: