@@ -418,6 +418,7 @@
 #  define ACE_HAS_RECURSIVE_MUTEXES
 #  define ACE_HAS_THREAD_SPECIFIC_STORAGE
 #  define ACE_LACKS_PTHREAD_ATTR_SETSTACK
+#  define ACE_LACKS_CONDATTR_SETCLOCK
 #endif /* ACE_HAS_THREADS */
 
 #define ACE_HAS_POSIX_SEM
